added some color to website

--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -7,7 +7,7 @@
   font-family: 'Raleway', sans-serif;
 }
 
-$primary: #04756F;
+$primary: #34F5D7;
 $warning: #FFE814;
 $danger: #94090D;
 $success: #43A047;
