--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -14,6 +14,7 @@
   font-weight: bold;
   width: 70%;
   margin: 0 auto;
+  color: #34F5D7;
 
 }
 
@@ -26,7 +27,7 @@
 }
 
 .contact_item input:hover, textarea:hover {
-  border-bottom: solid 1px teal;
+  border-bottom: solid 1px #34F5D7;
 }
 
 .contact_item input, .contact_item label {
