--- a/src/components/contact/contact-mobile/ContactMob.scss
+++ b/src/components/contact/contact-mobile/ContactMob.scss
@@ -14,6 +14,7 @@
   /* font-size: 14px; */
   font-size: 1.5em;
   font-weight: bold;
+  color: #34F5D7
 
 }
 
@@ -23,26 +24,30 @@
   border-bottom: solid 1px #ccc;
   padding: 1.5vw;
   width: 100%;
+  color: #34F5D7
 }
 
 .contact_item-mob input:hover, textarea:hover {
-  border-bottom: solid 1px teal;
+  border-bottom: solid 1px #34F5D7;
 }
 
 .contact_item-mob input, .contact_item-mob label {
   display: block;
   // background-color: rgb(231, 255, 253);
   background-color: #f1f3f3;
+  color: #34F5D7
 }
 
 .contact_item-mob textarea {
   height: 10em;
   // background-color: rgb(231, 255, 253);
   background-color: #f1f3f3;
+  color: #34F5D7
 }
 
 .contact-heading-mob {
   text-align: center;
+  color: #34F5D7
 }
 
 .contact-mob h2 {
