--- a/src/mobile/footer-mob/FooterMob.scss
+++ b/src/mobile/footer-mob/FooterMob.scss
@@ -14,6 +14,7 @@
   justify-content: space-between;
   // border: 1px red solid;
   height: 5em;
+  color: #34F5D7
   
 }
 .foot-cp-mob {
@@ -36,7 +37,7 @@
   display: flex;
   // border: 2px blue solid;
   &.social-wrapper-mob a {
-    color: black;
+    color: #34F5D7;
   }
 }
 
